Fixed alignment of CSS

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
 
 .paragraph  {
   width: 80%;
-  margin-left: 10%;
+  margin-left: 15%;
   padding-bottom: 25px;
 }
 
